$Id$                       -*-text-*-

**** 0.71

Fix rt.cpan.org #81869

	Disambiguate ANY in rr_del auxilliary function, as suggested
	by Mark Andrews

Fix rt.cpan.org #81756

	Test failures on Perl 5.8.5 .. 5.8.8.
	lc(), uc() and case insensitive regex matching broken for UTF8.
	Thanks are due to Paul Howarth for patient work with perl -d.
	
Fix rt.cpan.org #81787

	NXDOMAIN no longer reported by $resolver->errorstring.

Fix rt.cpan.org #81814

	Allow zero in format, tag and algorithm fields of CERT RR.

Fix rt.cpan.org #81786

	Substitute last owner for leading spaces in multiline zonefile RR.

Fix rt.cpan.org #77444

	Make use of new extended header modus operandi for OPT records
	also in the resolver. Preventing a warning.

**** 0.70 Dec 6, 2012

Feature added support for NID L32 L64 LP, RFC6742.

**** 0.69 Dec 5, 2012

Feature rt.cpan.org #62030

	Parsing of BIND zone files implemented in Net::DNS::ZoneFile.
	This replaces and is backward compatible with the CPAN module
	of the same name.

Enhancement to simplify RR subtype template and recode packages.

Enhancement rt.cpan.org #75185

	Packet decoder returns index to end of decoded data.

	Added packet->reply() method.

Fix rt.cpan.org #79569

	AXFR not setting packet->answer_from.

Enhancement rt.cpan.org #18819

	Added support for Unicode and non-ASCII character encoding.

Feature integrate OPT as a header extension

	Treat extended rcodes and the DO flag like they are part of
	the packet header.

Fix rt.cpan.org #77444

	Support escaped characters according to RFC1035 in TXT rdata.

Fix rt.cpan.org #77304

	Fix resolver searchlist from registry setup on Win32.

Enhancement rt.cpan.org #67570

	Make wire2presentation two till eighteen times faster.
	A contribution from Matthew Horsfall

Fix rt.cpan.org #73366

	Remove existing TSIG when resigning with a new TSIG and give warning.

Fix rt.cpan.org #75330

	Also try nameserver without glue (as a last resort) when recursing.

Fix rt.cpan.org #74493
